# web-alert

./: CHANGELOG.md  README.md  create_icon.py  main.py  pyproject.toml
scripts/: create_icon.py
web_alert/ui/: add_job_dialog.py  edit_job_dialog.py
wiki/: ARCHITECTURE.md  DEV_GUIDE.md  MIGRATIONS.md
