[project]
name = "web-alert"
version = "1.0.0"
description = "Modern web monitoring and alert system with GUI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "customtkinter>=5.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
web-alert = "web_alert.gui:main"
